--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aplicacion de react con selector de color, creacion de cards">
+    <meta name="keywords" content="react, vite, useState, props, bootstrap, sweetalert2">
+    <meta name="author" content="Lucas Figueroa">
     <title>Paleta de colores</title>
   </head>
   <body>
